Run sample tests only